# ORJANOS_MASTER_REPO

./: .gitignore  .gitmodules  README.md  Untitled Diagram.drawio  bibliography.bib  main.tex  mcode.sty  titlepage.tex  usepackages.tex
Algorithms/: algHuskyMaster.tex  algPaPImplement.tex  algPaPPick.tex  algPaPSearch.tex  algScenePubImplement.tex  algScenePubLoadScene.tex
Figures/: Untitled Diagram.drawio  figUiaMap.pgm
Tables/: husky_specs.tex  tabHuskySpecs.tex  tabOusterParams.tex  tabVX300Specs.tex
appendices/: appendix.tex
chapters/: 1_intro.tex  2_theory.tex  3_method.tex  4_results.tex  4_results_and_discussion.tex  5_discussion.tex  6_conclusion.tex  7_future _work.tex  acknowledgements.tex  declaration.tex  discussion.tex  example.tex  intro.tex  method.tex  results.tex  theory.tex
chapters/Pre-Chapters/: a_declaration.tex  b_acknowledgements.tex  c_abstract.tex  d_sammendrag.tex
code/: README.md  rviz_nav.rviz
code/params/: camera_info.yaml  params.yaml  scene_geometry.scene
code/src/apriltag_ros/apriltag_ros/cfg/: tags_36h11_all.yaml  tags_36h11_filter.yaml  tags_52h13_all.yaml
code/src/apriltag_ros/apriltag_ros/launch/: orjan_realsense.launch.py
code/src/hello_moveit/: CMakeLists.txt  package.xml
code/src/hello_moveit/launch/: hello_moveit_launch.py  xsarm_hello_moveit.launch.py
code/src/hello_moveit/src/: hello_moveit.cpp
code/src/husky/husky_base/include/husky_base/: husky_hardware.hpp
code/src/husky_base/: CMakeLists.txt
code/src/husky_base/src/: husky_hardware.cpp
code/src/husky_description/meshes/: frame_link.STL
code/src/husky_description/urdf/: decorations.urdf.xacro  husky.urdf.xacro
code/src/husky_group/: CMakeLists.txt  package.xml
code/src/husky_group/launch/: husky.launch.py  husky1.launch.py  real_husky_launch.py  rviz_moveit_launch.py  simulation_launch.py  teleop_base_launch.py  teleop_joy_launch.py  ultimate_launch.py
code/src/husky_group/maps/: masterlabben.pgm  masterlabben.yaml  mekalaben.pgm  mekalaben.yaml
code/src/husky_group/meshes/: realsense.scene
code/src/husky_group/params/: control.yaml  localization.yaml  mapper_params_lifelong.yaml  mapper_params_online_async_old.yaml  nav2_params.yaml  nav2_params_old.yaml  ouster_lidar.yaml  rviz_config.rviz
code/src/husky_group/urdf/: Realsense_assembly.urdf  husky_urdf_extras.urdf  interbotix_urdf_extras.urdf
code/src/husky_interbotix/: CMakeLists.txt  package.xml
code/src/husky_interbotix/launch/: cam_launch.py  continuous_detection.launch.xml  deprecated_husky_interbotix.launch.py  husky_interbotix.launch.py  rviz_moveit_launch.py  sim_husky_interbotix_launch.py  xavier2_launch.py
code/src/husky_interbotix/params/: params.yaml  tags.param.yaml
code/src/husky_interbotix/rviz/: rviz_config.rviz
code/src/husky_interbotix/srdf/: interbotix_srdf_extras.srdf
code/src/husky_interbotix/urdf/: interbotix_urdf_extras.urdf
code/src/husky_master/: package.xml  setup.cfg  setup.py
code/src/husky_master/husky_master/: husky_master.py
code/src/husky_master/launch/: husky_master_launch.py
code/src/husky_pick_and_place/: CMakeLists.txt  package.xml  pick_place.py
code/src/husky_pick_and_place/include/scene_geometry_publisher/: scene_geometry_publisher.hpp
code/src/husky_pick_and_place/launch/: pick_and_place_launch.py  pick_launch.py  place_launch.py  scene_geometry_publisher_launch.py  xsarm_perception.launch.py
code/src/husky_pick_and_place/src/: husky_pick_and_place.cpp  pick_and_place.cpp  pick_and_place_class.cpp  pick_node..cpp  pick_node.cpp  place_node.cpp
code/src/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_moveit/: package.xml
code/src/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_ros_control/: package.xml
code/src/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_sim/: package.xml
code/src/interbotix_ros_toolboxes/interbotix_common_toolbox/interbotix_tf_tools/src/: tf_rebroadcaster.cpp
code/src/interbotix_ros_toolboxes/interbotix_xs_toolbox/interbotix_xs_modules/interbotix_xs_modules/xs_robot/: __init__.py
code/src/interbotix_ros_toolboxes/interbotix_xs_toolbox/interbotix_xs_ros_control/include/interbotix_xs_ros_control/: xs_hardware_interface.hpp
code/src/interbotix_ros_toolboxes/interbotix_xs_toolbox/interbotix_xs_ros_control/src/: xs_hardware_interface.cpp
code/src/scene_geometry_publisher/: CMakeLists.txt  package.xml
code/src/scene_geometry_publisher/include/scene_geometry_publisher/: scene_geometry_publisher.cpp  scene_geometry_publisher.hpp
code/src/scene_geometry_publisher/launch/: rviz_moveit_launch.py
code/src/scene_geometry_publisher/scene/: scene_geometry.scene
code/src/scene_geometry_publisher/src/: scene_geometry_publisher.cpp  scene_publisher.cpp
code/src/scene_publisher/: package.xml  setup.cfg  setup.py
code/src/scene_publisher/scene_publisher/: scene_publisher.py
code/src/serial/: CMakeLists.txt
code/src/serial/tests/: CMakeLists.txt
code/src/um7/src/: comms.cpp
