<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>husky_group</name>
  <version>1.0.8</version>
  <description>Package for husky group</description>
  <author email="orjano18@uia.no">Ørjan Øvsthus</author>
  <maintainer email="orjano18@uia.no">Ørjan Øvsthus</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>serial</depend>
  <depend>um7</depend>
  <depend>husky_base</depend>
  <depend>ros2_ouster</depend>
  <depend>pointcloud_to_laserscan</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
